--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTP-8">
+        <meta charset="UTF-8">
         <title>Homepage</title>
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
+        <a href="recipes/shrimp-pasta-salad.html">Shrimp Pasta Salad</a>
     </body>
 </html>
