Added image to homepage

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <img src="images/recipe-book.jpg" alt="Recipe Book" height="600" width="700">
+        <p></p>
         <a href="recipes/shrimp-pasta-salad.html">Shrimp Pasta Salad</a>
     </body>
 </html>
