Added content to the page about the recipe

--- a/recipes/shrimp-pasta-salad.html
+++ b/recipes/shrimp-pasta-salad.html
@@ -2,11 +2,45 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Document</title>
+        <title>Shrimp Pasta Salad</title>
     </head>
 
     <body>
         <h1>Shrimp Pasta Salad</h1>
+        <img src="../images/shrimp-pasta-salad.jpg" alt="Shrimp Pasta Salad" height="600" width="700">
+        <h2>Description</h2>
+        <p>Shrimp Pasta Salad is a light, refreshing dish, perfect for summer gatherings or a quick lunch.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>8 oz pasta (rotini, penne, or bowtie work well)</li>
+            <li>1 lb cooked shrimp (peeled and deveined)</li>
+            <li>1 cup cherry tomatoes, halved</li>
+            <li>1 cup cucumber, diced</li>
+            <li>1/2 cup red onion, thinly sliced</li>
+            <li>1/2 cup celery, finely chopped</li>
+            <li>1/4 cup fresh parsley or dill, chopped</li>
+            <li>1/2 cup mayonnaise (for creamy version)</li>
+            <li>2 tbsp sour cream or Greek yogurt</li>
+            <li>1 tbsp Dijon mustard</li>
+            <li>1-2 tbsp lemon juice</li>
+            <li>1-2 tsp Old Bay seasoning (optional, for added flavor)</li>
+            <li>Salt and black pepper, to taste</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Boil water in a large pot with a pinch of salt.</li>
+            <li>Add 8 oz of pasta and cook until al dente (firm to the bite).</li>
+            <li>Drain, rinse under cold water to stop cooking, and set aside.</li>
+            <li>In a mixing bowl, whisk together: 1/2 cup mayonnaise,2 tbsp sour cream or Greek yogurt, 
+                1 tbsp Dijon mustard, 1-2 tbsp lemon juice,1-2 tsp Old Bay seasoning (optional), Salt and pepper, to taste</li>
+            <li>Set aside in the fridge to chill.</li> 
+            <li>Slice 1 cup cherry tomatoes, dice 1 cup cucumber, thinly slice 1/2 cup red onion, and finely chop 1/2 cup celery.</li> 
+            <li>If your shrimp is not yet cooked, lightly sauté or boil it until pink and opaque, then cool completely.</li>
+            <li>In a large bowl, mix together: Cooked and cooled pasta, Shrimp, All chopped vegetables, Chopped parsley or dill</li>
+            <li>Pour the dressing over and gently toss to coat everything evenly.</li>
+            <li>Refrigerate for at least 30 minutes before serving to let the flavors meld.</li>
+            <li>Serve chilled, optionally garnished with a lemon wedge or extra herbs.</li>  
+        </ol>
         <a href="../index.html">Home</a>
     </body>
 </html>
