--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         <h1>Odin Recipes</h1>
         <img src="images/recipe-book.jpg" alt="Recipe Book" height="600" width="700">
         <p></p>
-        <a href="recipes/shrimp-pasta-salad.html">Shrimp Pasta Salad</a>
+        <ul>
+            <li><a href="recipes/shrimp-pasta-salad.html">Shrimp Pasta Salad</a></li>
+            <li><a href="recipes/meyer-lemon-pie.html">Meyer Lemon Pie</a></li>
+            <li><a href="recipes/american-lasagna.html">American Lasagna</a></li>
+        </ul>
     </body>
 </html>
